--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -62,6 +62,10 @@ h2,
   font-weight: 600;
 }
 
+.card-header-blue {
+  background-color: #cfe2ff;
+}
+
 .card-body {
   background-color: #fffbf0;
 }
@@ -76,6 +80,14 @@ h2,
   font-size: 0.9rem;
   font-weight: 600;
   margin-right: 0.3rem;
+}
+
+.add-log-link {
+  font-family: Quicksand, sans-serif;
+  text-decoration: none;
+  color: black;
+  font-size: 0.9rem;
+  margin-left: 1rem;
 }
 
 .weather-link {
