--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -19,13 +19,30 @@
   text-align: end;
 }
 
+.modal-window-entries {
+  background-color: #fffbf0;
+  border: 0.2rem solid #658dc8;
+  font-family: Quicksand, sans-serif;
+  padding: 1.5rem;
+  width: 90%;
+  text-align: end;
+}
+
 .modal-button {
-  background-color: white;
+  background-color: inherit;
   border: none;
+}
+
+.modal-button:focus {
+  outline: 0;
 }
 
 .fa-xmark {
   font-size: 1.5rem;
+}
+
+.fa-xmark-blue {
+  color: #658dc8;
 }
 
 h4 {
@@ -44,6 +61,27 @@ h4 {
 
 p {
   margin: 0;
+}
+
+textarea {
+  border: 0.1rem solid #658dc8;
+  display: block;
+  margin: auto;
+  padding: 0.7rem;
+  width: 90%;
+}
+
+textarea:focus {
+  outline-color: #658dc8;
+}
+
+.btn-outline-primary {
+  color: #658dc8;
+  border-color: #658dc8;
+}
+
+.btn-outline-primary:hover {
+  background-color: #658dc8;
 }
 
 .row {
@@ -119,6 +157,14 @@ a:hover {
 
   .modal-window {
     width: 40%;
+  }
+
+  .modal-window-entries {
+    width: 40%;
+  }
+
+  textarea {
+    width: 85%;
   }
 }
 
