#2 added a pointer cursor when mouse is hovered over surf checkbox, edited render method of 'home' component to remove unnecessary code

--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -113,6 +113,10 @@ h2,
   margin-right: 0.7rem;
 }
 
+.surf-question-div > input:hover {
+  cursor: pointer;
+}
+
 .surf-question-label {
   font-family: inter, sans-serif;
   font-size: 0.9rem;
