#2 redesigned state properties of constructor, took response from post request and displayed content onto day cards

--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -124,6 +124,7 @@ h2,
   margin-right: 0.3rem;
 }
 
+.entry-content,
 .add-log-link {
   font-family: Quicksand, sans-serif;
   text-decoration: none;
