--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -84,6 +84,19 @@ textarea:focus {
   background-color: #658dc8;
 }
 
+.navbar {
+  background-color: #658dc8;
+  color: white;
+  font-family: inter, sans-serif;
+  font-weight: 600;
+  font-size: 1.4rem;
+}
+
+.app-name {
+  text-decoration: none;
+  color: white;
+}
+
 .row {
   justify-content: center;
 }
@@ -92,6 +105,7 @@ textarea:focus {
   padding: 0;
   background-color: #f1f1f1;
   box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.3);
+  width: 100%;
 }
 
 h2,
