--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -97,6 +97,35 @@ textarea:focus {
   color: white;
 }
 
+.modal-background-menu {
+  position: fixed;
+  top: 3rem;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.6);
+  z-index: 1;
+}
+
+.menu-window {
+  background-color: white;
+  position: fixed;
+  top: 3rem;
+  right: 0;
+}
+
+.menu-anchor-div {
+  text-align: center;
+  border-bottom: 0.1rem solid #dedddd;
+  padding: 0.8rem 1.6rem;
+}
+
+.menu-anchor {
+  display: block;
+  text-decoration: none;
+  color: black;
+  font-size: 1rem;
+}
+
 .row {
   justify-content: center;
 }
@@ -109,7 +138,8 @@ textarea:focus {
 }
 
 h2,
-.card-header {
+.card-header,
+.menu-anchor {
   font-family: Quicksand, sans-serif;
   font-weight: 600;
 }
@@ -184,6 +214,14 @@ a:hover {
 
   textarea {
     width: 85%;
+  }
+
+  .menu-anchor-div {
+    padding: 0.8rem 3.5rem;
+  }
+
+  .menu-anchor {
+    font-size: 1rem;
   }
 }
 
