--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -120,6 +120,10 @@ textarea:focus {
   position: fixed;
   top: 3rem;
   right: 0;
+  height: 95%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .menu-anchor-div {
@@ -133,6 +137,11 @@ textarea:focus {
   text-decoration: none;
   color: black;
   font-size: 1rem;
+}
+
+img {
+  width: 500px;
+  margin-bottom: 1rem;
 }
 
 .row {
