--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -43,6 +43,27 @@
   color: #658dc8;
 }
 
+.loading-div {
+  display: flex;
+  justify-content: center;
+  position: relative;
+  top: 3rem;
+}
+
+.fa-person-swimming {
+  position: absolute;
+  top: 1.8rem;
+  font-size: 2rem;
+  animation-name: slide;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+}
+
+@keyframes slide {
+  0% { right: 15%; }
+  100% { right: 75%; }
+}
+
 h4 {
   font-family: inter, sans-serif;
   font-weight: 600;
@@ -249,6 +270,21 @@ a:hover {
     margin-bottom: 5rem;
   }
 
+  .fa-person-swimming {
+    top: 2rem;
+    animation-duration: 2.5s;
+  }
+
+  @keyframes slide {
+    0% {
+      right: 30%;
+    }
+
+    100% {
+      right: 65%;
+    }
+  }
+
   @keyframes slidein {
     from {
       right: -25rem;
@@ -263,5 +299,19 @@ a:hover {
 @media screen and (min-width: 1280px) {
   .card-header {
     font-size: 0.9rem;
+  }
+
+  .fa-person-swimming {
+    animation-duration: 2.8s;
+  }
+
+  @keyframes slide {
+    0% {
+      right: 35%;
+    }
+
+    100% {
+      right: 60%;
+    }
   }
 }
