--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -64,6 +64,12 @@
   100% { right: 75%; }
 }
 
+.no-logs-div {
+  display: flex;
+  justify-content: center;
+  margin-top: 3rem;
+}
+
 h4 {
   font-family: inter, sans-serif;
   font-weight: 600;
